fix: overflow on Display

--- a/src/components/Display.css
+++ b/src/components/Display.css
@@ -3,5 +3,21 @@ Author: João Victor David de Oliveira (j.victordavid2@gmail.com)
 Display.css (c) 2022
 Desc: css for Display component
 Created:  2022-04-28T01:02:42.680Z
-Modified: 2022-04-28T01:03:02.712Z
+Modified: 2022-04-28T01:24:44.284Z
 */
+
+.display {
+  max-width: calc(4 * 25%);
+  grid-column: span 4;
+  background-color: #0009;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  padding: 0.5em;
+  font-size: 2em;
+}
+
+.display span {
+  width: 100%;
+  overflow-x: auto;
+}
