--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,47 @@ body {
     #00f260
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+::-webkit-scrollbar {
+  background: #00f260; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #0575e6,
+    #00f260
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #0575e6,
+    #00f260
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 1rem;
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+  background: #00f260; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to left,
+    #0575e6,
+    #00f260
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to left,
+    #0575e6,
+    #00f260
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border-radius: 1rem;
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+  background-color: #0004;
+  border-radius: 1rem;
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none;
+}
